# proc_experiments

./: .gitignore  Cargo.toml
bitfield/: Cargo.toml
bitfield/impl/: Cargo.toml
bitfield/impl/src/: bit_fields.rs  helper.rs  lib.rs
bitfield/impl/src/handle_bitfield/: getter_and_setter.rs  mod.rs
bitfield/src/: lib.rs
bitfield/tests/: progress.rs
builder/: Cargo.toml
builder/src/: lib.rs
custom_debug/: Cargo.toml
custom_debug/src/: lib.rs
debug/: Cargo.toml
debug/src/: lib.rs
debug/tests/: 01-parse.rs  02-impl-debug.rs  03-custom-format.rs  04-type-parameter.rs  05-phantom-data.rs  06-bound-trouble.rs  07-associated-type.rs  progress.rs
dec_macro/: Cargo.toml
dec_macro/src/dec_macs/: more_complex_example.rs  more_repetition.rs  repetition.rs
exp_execute/: Cargo.toml
exp_execute/src/: builder_handler.rs  custom_debug.rs  lib.rs  main.rs
macs/: Cargo.toml
macs/src/: lib.rs
macs/src/dec_macs/: ambiguity_and_ordering.rs  expression_variables  literal_variables  more_complex_example  my_first_macro  numbers
proc_experiments/: Cargo.toml
sorted/: Cargo.toml
sorted/src/: lib.rs
sorted/tests/: 02-not-enum.stderr  03-out-of-order.stderr  04-variants-with-data.stderr  progress.rs
