[package]
name = "derive_debug"
version = "0.0.0"
edition = "2021"
publish = false
autotests = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dependencies]
quote = "1.0.45"
syn = { version = "2.0.117", features = ["derive"] }

[dev-dependencies]
trybuild = { version = "1.0.108", features = ["diff"] }
